--- a/Getting Functional/function.html
+++ b/Getting Functional/function.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Play Battleship!</h1>
-    <script src="battleship_v2.js"></script>
+    <h1>Play Woof Woof!</h1>
+    <script src="function.js"></script>
 </body>
 </html>
